
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u8 ;
typedef int u32 ;
struct ieee80211_hw {int dummy; } ;


 int BIT (int) ;
 int MASKDWORD ;
 int ROFDM0_ECCATHRESHOLD ;
 int ROFDM0_XARXIQIMBALANCE ;
 int ROFDM0_XATXIQIMBALANCE ;
 int ROFDM0_XCTXAFE ;
 int rtl_get_bbreg (struct ieee80211_hw*,int,int ) ;
 int rtl_set_bbreg (struct ieee80211_hw*,int,int,int) ;

__attribute__((used)) static void _rtl92c_phy_path_a_fill_iqk_matrix(struct ieee80211_hw *hw,
            bool b_iqk_ok, long result[][8],
            u8 final_candidate, bool btxonly)
{
 u32 oldval_0, x, tx0_a, reg;
 long y, tx0_c;

 if (final_candidate == 0xFF) {
  return;
 } else if (b_iqk_ok) {
  oldval_0 = (rtl_get_bbreg(hw, ROFDM0_XATXIQIMBALANCE,
       MASKDWORD) >> 22) & 0x3FF;
  x = result[final_candidate][0];
  if ((x & 0x00000200) != 0)
   x = x | 0xFFFFFC00;
  tx0_a = (x * oldval_0) >> 8;
  rtl_set_bbreg(hw, ROFDM0_XATXIQIMBALANCE, 0x3FF, tx0_a);
  rtl_set_bbreg(hw, ROFDM0_ECCATHRESHOLD, BIT(31),
         ((x * oldval_0 >> 7) & 0x1));
  y = result[final_candidate][1];
  if ((y & 0x00000200) != 0)
   y = y | 0xFFFFFC00;
  tx0_c = (y * oldval_0) >> 8;
  rtl_set_bbreg(hw, ROFDM0_XCTXAFE, 0xF0000000,
         ((tx0_c & 0x3C0) >> 6));
  rtl_set_bbreg(hw, ROFDM0_XATXIQIMBALANCE, 0x003F0000,
         (tx0_c & 0x3F));
  rtl_set_bbreg(hw, ROFDM0_ECCATHRESHOLD, BIT(29),
         ((y * oldval_0 >> 7) & 0x1));
  if (btxonly)
   return;
  reg = result[final_candidate][2];
  rtl_set_bbreg(hw, ROFDM0_XARXIQIMBALANCE, 0x3FF, reg);
  reg = result[final_candidate][3] & 0x3F;
  rtl_set_bbreg(hw, ROFDM0_XARXIQIMBALANCE, 0xFC00, reg);
  reg = (result[final_candidate][3] >> 6) & 0xF;
  rtl_set_bbreg(hw, 0xca0, 0xF0000000, reg);
 }
}
